Events distribution tests

--- a/code/tests/Timeline.Domain.Tests/Timeline.Domain.Tests.csproj
+++ b/code/tests/Timeline.Domain.Tests/Timeline.Domain.Tests.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Timeline.Domain\Timeline.Domain.csproj" />
+    <ProjectReference Include="..\..\src\Timeline.Domain\Timeline.Domain.csproj" />
   </ItemGroup>
 
 </Project>
