Hierarchy tests. Places storage

--- a/code/src/Timeline.Domain/Timeline.Domain.csproj
+++ b/code/src/Timeline.Domain/Timeline.Domain.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>EdlinSoftware.Timeline.Domain</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <WarningLevel>5</WarningLevel>
+  </PropertyGroup>
+
 </Project>
