--- a/code/Timeline.Storage/Timeline.Storage.csproj
+++ b/code/Timeline.Storage/Timeline.Storage.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <RootNamespace>EdlinSoftware.Timeline.Storage</RootNamespace>
+    <AssemblyName>EdlinSoftware.Timeline.Storage</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
